--- a/index.html
+++ b/index.html
@@ -111,31 +111,31 @@
       <section class="services-grid">
           <div class="service-card">
               <h3>🗄️ Almacenamiento en la Nube</h3>
-              <a href="#" class="onion-link">http://jjzgblz6uccwxv72w7kkby3qp4s3ua3lxnclt7zfuukxbebaoeq4mpyd.onion</a>
+              <a href="http://jjzgblz6uccwxv72w7kkby3qp4s3ua3lxnclt7zfuukxbebaoeq4mpyd.onion" target="_blank" class="onion-link">http://jjzgblz6uccwxv72w7kkby3qp4s3ua3lxnclt7zfuukxbebaoeq4mpyd.onion</a>
               <p>Plataforma de almacenamiento seguro con cifrado de extremo a extremo</p>
           </div>
 
           <div class="service-card">
               <h3>🔍 Motor de Búsqueda Privado</h3>
-              <a href="#" class="onion-link">http://onion5qv5g3kp2n644yrrt46d3uxgbqb5de5yixjexwd4wbwwzalbdqd.onion/</a>
+              <a href="http://onion5qv5g3kp2n644yrrt46d3uxgbqb5de5yixjexwd4wbwwzalbdqd.onion" target="_blank" class="onion-link">http://onion5qv5g3kp2n644yrrt46d3uxgbqb5de5yixjexwd4wbwwzalbdqd.onion/</a>
               <p>Búsquedas 100% anónimas sin registro de historial</p>
           </div>
 
           <div class="service-card">
               <h3>💰 Wallet de Red Kron</h3>
-              <a href="#" class="onion-link">http://knaczfkhnb4podt3326trn3g7uzgwruhagmhhhrkillctnuewtekxiqd.onion/</a>
+              <a href="http://knaczfkhnb4podt3326trn3g7uzgwruhagmhhhrkillctnuewtekxiqd.onion" target="_blank" class="onion-link">http://knaczfkhnb4podt3326trn3g7uzgwruhagmhhhrkillctnuewtekxiqd.onion/</a>
               <p>Transacciones anónimas con soporte para múltiples criptomonedas</p>
           </div>
 
           <div class="service-card">
               <h3>💬 Mensajería Instantánea</h3>
-              <a href="#" class="onion-link">http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion/</a>
+              <a href="http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onio" target="_blank" class="onion-link">http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion/</a>
               <p>Comunicación cifrada de extremo a extremo</p>
           </div>
 
           <div class="service-card">
               <h3>📁 Compartición de Archivos</h3>
-              <a href="#" class="onion-link">http://share35svnxehabrmt23qcb4azdi5ntbukvqb5psvu4ldywkgzhrgiyd.onion</a>
+              <a href="http://share35svnxehabrmt23qcb4azdi5ntbukvqb5psvu4ldywkgzhrgiyd.onion" target="_blank" class="onion-link">http://share35svnxehabrmt23qcb4azdi5ntbukvqb5psvu4ldywkgzhrgiyd.onion</a>
               <p>Almacenamiento y descarga de archivos anónimos y seguros</p>
           </div>
       </section>
