--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <div class="service-card">
               <h3>💬 Mensajería Instantánea</h3>
-              <a href="http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onio" target="_blank" class="onion-link">http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion/</a>
+              <a href="http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion" target="_blank" class="onion-link">http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion/</a>
               <p>Comunicación cifrada de extremo a extremo</p>
           </div>
 
