--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
               <a href="http://share35svnxehabrmt23qcb4azdi5ntbukvqb5psvu4ldywkgzhrgiyd.onion" target="_blank" class="onion-link">http://share35svnxehabrmt23qcb4azdi5ntbukvqb5psvu4ldywkgzhrgiyd.onion</a>
               <p>Almacenamiento y descarga de archivos anónimos y seguros</p>
           </div>
+
+        <div class="service-card">
+          <h3>💬 Foro Libre</h3>
+          <a href="http://6x4p27bnkx7ebfkk2sis7mtkbc4gr264wynrb72ujdkzoxjaaolj3aqd.onion" target="_blank" class="onion-link">http://6x4p27bnkx7ebfkk2sis7mtkbc4gr264wynrb72ujdkzoxjaaolj3aqd.onion/</a>
+          <p>Plataforma de discusión anónima y segura. Espacio para intercambio de ideas libre de censura y con protección de privacidad.</p>
+        </div>
       </section>
 
       <section class="security-section">
