--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
           <a href="http://6x4p27bnkx7ebfkk2sis7mtkbc4gr264wynrb72ujdkzoxjaaolj3aqd.onion" target="_blank" class="onion-link">http://6x4p27bnkx7ebfkk2sis7mtkbc4gr264wynrb72ujdkzoxjaaolj3aqd.onion/</a>
           <p>Plataforma de discusión anónima y segura. Espacio para intercambio de ideas libre de censura y con protección de privacidad.</p>
         </div>
+
+        <div class="service-card">
+          <h3>📁 Free tube</h3>
+          <a href="http://yegwc4zhdicjxzcasbntivdcmvjkvwwrlazrrtniuazgd4l7wwoguwqd.onion" target="_blank" class="onion-link">http://yegwc4zhdicjxzcasbntivdcmvjkvwwrlazrrtniuazgd4l7wwoguwqd.onion/</a>
+          <p>Plataforma de videos Variados.</p>
+        </div>
       </section>
 
       <section class="security-section">
