--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
           </div>
 
           <div class="service-card">
+            <h3>🔍 Explorador de Kron Smart Chain</h3>
+            <a href="http://scflzt6yonkohedehfd2mb23szqjpq3tufx4mvklaahyc5zc4e4xttqd.onion" target="_blank" class="onion-link">http://scflzt6yonkohedehfd2mb23szqjpq3tufx4mvklaahyc5zc4e4xttqd.onion/</a>
+            <p>Explora transacciones, bloques y contratos inteligentes en la red Kron Smart Chain</p>
+          </div>
+
+
+          <div class="service-card">
               <h3>💬 Mensajería Instantánea</h3>
               <a href="http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion" target="_blank" class="onion-link">http://zt7hmzrk3u72nbqi4wzz6vs5kvrujhgtupksyhenlsseuusvnjpvjqqd.onion/</a>
               <p>Comunicación cifrada de extremo a extremo</p>
