--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
           <p>Plataforma de discusión anónima y segura. Espacio para intercambio de ideas libre de censura y con protección de privacidad.</p>
         </div>
 
+         <div class="service-card">
+          <h3>💬 Memos</h3>
+          <a href="http://dywzxtvfhpwj7xkzwz4vjqylv6hcee3ifqecu7qyzfodj6cnz72w3mad.onion" target="_blank" class="onion-link">http://dywzxtvfhpwj7xkzwz4vjqylv6hcee3ifqecu7qyzfodj6cnz72w3mad.onion/</a>
+          <p>Plataforma de red social. Espacio para intercambio de fotos, ideas, espacio de trabajo etc.</p>
+        </div>
+
         <div class="service-card">
           <h3>📁 Free tube</h3>
           <a href="http://tngluj2v6vm5cpzwfzmlcdxiriqmgbjtj5b5h3pwex7zrgtkzqduuyad.onion" target="_blank" class="onion-link">http://tngluj2v6vm5cpzwfzmlcdxiriqmgbjtj5b5h3pwex7zrgtkzqduuyad.onion/</a>
